git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11424 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: e928085eac59eb77a7f1a2902b4e5825838c9df4

--- a/componentmodel.atruntime_projects/org.smartadapters.core.resource.core/plugin.xml
+++ b/componentmodel.atruntime_projects/org.smartadapters.core.resource.core/plugin.xml
@@ -30,12 +30,7 @@
 	<extension point="org.eclipse.ui.newWizards">
 		<category id="org.emftext.runtime.ui.EMFTextFileCategory" name="EMFText File">
 		</category>
-		<wizard
-        category="org.emftext.runtime.ui.EMFTextFileCategory"
-        class="org.smartadapters.core.resource.core.ui.CoreNewFileWizard"
-        icon="/icons/default_new_icon.gif"
-        id="org.smartadapters.core.resource.core.ui.CoreNewFileWizard"
-        name="EMFText .part file">
+		<wizard category="org.emftext.runtime.ui.EMFTextFileCategory" icon="/icons/default_new_icon.gif" class="org.smartadapters.core.resource.core.ui.CoreNewFileWizard" id="org.smartadapters.core.resource.core.ui.CoreNewFileWizard" name="EMFText .part file">
 		</wizard>
 	</extension>
 	
