--- a/componentmodel.atruntime_projects/art.resource.art.popups/plugin.xml
+++ b/componentmodel.atruntime_projects/art.resource.art.popups/plugin.xml
@@ -66,7 +66,7 @@
       </objectContribution>
       <objectContribution
             id="art.resource.art.popups.contribution1"
-            nameFilter="*.xmi"
+            nameFilter="*.smART"
             objectClass="org.eclipse.core.resources.IFile">
          <menu
                id="art.resource.art.popups.menu1"
