git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11440 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: e5232d832422b4e45fcdfb7ba5ccd4c3dd2d3810

--- a/componentmodel.atruntime_projects/art.resource.art.popups/plugin.xml
+++ b/componentmodel.atruntime_projects/art.resource.art.popups/plugin.xml
@@ -6,7 +6,7 @@
          point="org.eclipse.ui.popupMenus">
       <objectContribution
             id="art.resource.art.popups.contribution1"
-            nameFilter="*.xmi"
+            nameFilter="*.art"
             objectClass="org.eclipse.core.resources.IFile">
          <menu
                label="ART"
@@ -26,7 +26,7 @@
       </objectContribution>
       <objectContribution
             id="art.resource.art.popups.contribution2"
-            nameFilter="*.art"
+            nameFilter="*.artext"
             objectClass="org.eclipse.core.resources.IFile">
          <menu
                id="art.resource.art.popups.menu2"
@@ -46,7 +46,7 @@
       </objectContribution>
       <objectContribution
             id="art.resource.art.popups.contribution4"
-            nameFilter="*.part"
+            nameFilter="*.smARText"
             objectClass="org.eclipse.core.resources.IFile">
          <menu
                id="art.resource.art.popups.menu2"
