--- a/componentmodel.atruntime_projects/org.smartadapters.core.resource.core/plugin.xml
+++ b/componentmodel.atruntime_projects/org.smartadapters.core.resource.core/plugin.xml
@@ -7,7 +7,7 @@
 	</extension>
 	
 	<extension point="org.eclipse.ui.editors">
-		<editor class="org.smartadapters.core.resource.core.ui.CoreEditor" contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor" extensions="part" icon="icons/editor_icon.gif" id="org.smartadapters.core.resource.core.ui.CoreEditor" name="EMFText core Editor">
+		<editor class="org.smartadapters.core.resource.core.ui.CoreEditor" contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor" extensions="smARText" icon="icons/editor_icon.gif" id="org.smartadapters.core.resource.core.ui.CoreEditor" name="EMFText core Editor">
 		</editor>
 	</extension>
 	
@@ -59,7 +59,7 @@
 	<extension-point id="org.smartadapters.core.resource.core.default_load_options" name="Default Load Options" schema="schema/default_load_options.exsd"/>
 	
 	<extension point="org.eclipse.emf.ecore.extension_parser">
-		<parser class="org.smartadapters.core.resource.core.mopp.CoreResourceFactoryDelegator" type="part">
+		<parser class="org.smartadapters.core.resource.core.mopp.CoreResourceFactoryDelegator" type="smARText">
 		</parser>
 	</extension>
 	
