--- a/art2_projects/org.kermeta.art2.runtime/pom.xml
+++ b/art2_projects/org.kermeta.art2.runtime/pom.xml
@@ -8,11 +8,6 @@
 	<version>0.4.0-SNAPSHOT</version>
 	<repositories>
 		<repository>
-			<id>scala-tools.org</id>
-			<name>Scala-tools Maven2 Repository</name>
-			<url>http://scala-tools.org/repo-snapshots</url>
-		</repository>
-		<repository>
 			<id>triskellPublic</id>
 			<url>http://tipimouss.irisa.fr:8081/nexus/content/groups/public</url>
 		</repository>
@@ -23,26 +18,11 @@
 			<artifactId>art2.kompare</artifactId>
 			<version>1.2.0-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.8.0-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		
 	</dependencies>
 
 	<build>
-		<sourceDirectory>src/main/scala</sourceDirectory>
+		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
-
-
-
-			<plugin>
-				<groupId>org.scala-tools</groupId>
-				<artifactId>maven-scala-plugin</artifactId>
-			</plugin>
 
 			<plugin>
 				<groupId>org.apache.felix</groupId>
@@ -51,29 +31,45 @@
 				<configuration>
 					<instructions>
 						<Bundle-ClassPath>.</Bundle-ClassPath>
-						<Import-Package>fr.irisa.triskell.kermeta.util,kermeta.*,fr.irisa.triskell.kermeta.language.structureScalaAspect.aspect,
-						fr.irisa.triskell.kermeta,
-						scala.*,!org.eclipse.emf.ecoreScalaAspect,art2.*,org.eclipse.emf.*,org.kermeta.log4j.util;resolution:=optional, org.w3c.dom, org.xml.sax, org.xml.sax.ext, org.xml.sax.helpers, sun.misc;resolution:=optional,org.osgi.framework.*,org.apache.commons.logging,javax.*,org.eclipse.core.*;resolution:=optional</Import-Package>
-						<Private-Package>!kermeta.*,!fr.irisa.triskell.kermeta.language.structureScalaAspect.aspect,
-						!fr.irisa.triskell.kermeta,!fr.irisa.triskell.kermeta.dev,!fr.irisa.triskell.kermeta.visitor,!fr.irisa.triskell.kermeta.validation,!fr.irisa.triskell.kermeta.util,!fr.irisa.triskell.kermeta.model.plugin,!fr.irisa.triskell.kermeta.util,
-						!scala.*,org.eclipse.emf.ecoreScalaAspect,!org.eclipse.emf.*,!art2.*,org.kermeta.art2.runtime.impl,*</Private-Package>
+						<Import-Package>
+                                                    !sun.misc,!org.kermeta.log4j.util,!org.eclipse.core.*,*
+                                                </Import-Package>
+						<Private-Package>
+                                                    *
+                                                </Private-Package>
 						<!--<DynamicImport-Package>*</DynamicImport-Package>-->
-						<Export-Package>org.kermeta.art2.runtime</Export-Package>
-						
+						<Export-Package>org.kermeta.art2.runtime,*</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
-
-
+		 <plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-compiler-plugin</artifactId>
+		  <configuration>
+		   <source>1.6</source>
+		   <target>1.6</target>
+		   <encoding>${project.build.sourceEncoding}</encoding>
+		  </configuration>
+		 </plugin>
+		 <plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-resources-plugin</artifactId>
+		  <configuration>
+		   <encoding>${project.build.sourceEncoding}</encoding>
+		  </configuration>
+		 </plugin>
 		</plugins>
 	</build>
-	
-	
+
+
 		<distributionManagement>
 		<snapshotRepository>
 			<id>nexus</id>
 			<url>http://tipimouss.irisa.fr:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
-	
+ <properties>
+  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+ </properties>
 </project>
+
