Beta 2 - Model Construction by Dnd Model Merge
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11461 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: afcbcc2dfd5f80d6c51d5899e4f873767e363cb4

--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -66,6 +66,15 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <version>2.0.0</version>
                 <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Private-Package></Private-Package>
+                        <Import-Package>!com.sun.*,!org.kermeta.art2.annotation,*</Import-Package>
+                        <Export-Package>org.kermeta.art2.framework,org.kermeta.art2.framework.*</Export-Package>
+                    </instructions>
+                </configuration>
+
+
             </plugin>
             <plugin>
                 <groupId>org.scala-tools</groupId>
