--- a/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/pom.xml
+++ b/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/pom.xml
@@ -7,7 +7,7 @@
     <name>fr.irisa.triskell.kermeta.compilo.scala</name>
     <version>0.0.2-SNAPSHOT</version>
     <description>Kermeta Compiler V2</description>
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -44,11 +44,7 @@
             <id>tipimouss</id>
             <url>http://tipimouss/maven2</url>
         </repository>
-
-
     </repositories>
-
-
     <pluginRepositories>
         <pluginRepository>
             <id>scala-tools.org</id>
@@ -56,10 +52,6 @@
             <url>http://scala-tools.org/repo-releases</url>
         </pluginRepository>
     </pluginRepositories>
-
-
-
-
     <build>
         <sourceDirectory>src</sourceDirectory>
         <resources>
@@ -67,11 +59,13 @@
                 <directory>resources</directory>
             </resource>
         </resources>
+        
         <!-- <testSourceDirectory>src/test/scala</testSourceDirectory> -->
         <plugins>
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
+               
                 <executions>
                     <execution>
                         <goals>
@@ -114,29 +108,30 @@
             </plugin>
             -->
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>truezip-maven-plugin</artifactId>
-                <version>1.0-beta-4</version>
-                <executions>
-                    <execution>
-                        <id>remove-a-file</id>
-                        <goals>
-                            <goal>remove</goal>
-                        </goals>
-                        <phase>package</phase>
-                        <configuration>
-                            <fileset>
-                                <directory>target/${project.artifactId}-${project.version}.jar/META-INF</directory>
-                                <includes>
-                                    <include>**/*.RSA</include>
-                                    <include>**/*.SF</include>
-                                </includes>
-                            </fileset>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+           <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>truezip-maven-plugin</artifactId>
+				<version>1.0-beta-4</version>
+				<executions>
+					<execution>
+						<id>remove-a-file</id>
+						<phase>package</phase>
+						<goals>
+							<goal>remove</goal>
+						</goals>
+						<configuration>
+							<fileset>
+								<directory>target/${project.artifactId}-${project.version}.jar/META-INF
+								</directory>
+								<includes>
+									<include>**/*.RSA</include>
+									<include>**/*.SF</include>
+								</includes>
+							</fileset>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 
 
@@ -146,7 +141,8 @@
                 <extensions>true</extensions>
                 <version>2.0.1</version>
                 <configuration>
-                    <instructions>
+                      <instructions>
+
                         <Private-Package>*</Private-Package>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                     </instructions>
