git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11488 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 193f485a6e2f86c21d3fae344c6a409283eda8e0

--- a/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/pom.xml
+++ b/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/pom.xml
@@ -197,6 +197,30 @@
                 </configuration>
             </plugin>
             -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>truezip-maven-plugin</artifactId>
+        <version>1.0-beta-4</version>
+        <executions>
+          <execution>
+            <id>remove-a-file</id>
+            <phase>package</phase>
+            <goals>
+              <goal>remove</goal>
+            </goals>
+            <configuration>
+              <fileset>
+                <directory>target/${project.artifactId}-${project.version}.jar/META-INF</directory>
+                <includes>
+                  <include>**/*.RSA</include>
+                  <include>**/*.SF</include>
+                </includes>
+              </fileset>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
 
         </plugins>
 
