--- a/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/pom.xml
+++ b/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/pom.xml
@@ -5,13 +5,13 @@
     <groupId>fr.irisa.triskell</groupId>
     <artifactId>kermeta.compilo.scala</artifactId>
     <name>fr.irisa.triskell.kermeta.compilo.scala</name>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2-BETA1</version>
     <description>Kermeta Compiler V2</description>
     <packaging>bundle</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <scala.version>2.8.0.RC1</scala.version>
+        <scala.version>2.8.0.RC3</scala.version>
     </properties>
     <repositories>
         <repository>
@@ -309,14 +309,14 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.8.0.RC1</version>
+            <version>2.8.0.RC3</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.8.0.RC1</version>
+            <version>2.8.0.RC3</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -329,7 +329,7 @@
         <dependency>
             <groupId>fr.irisa.triskell</groupId>
             <artifactId>kermeta.scala.framework</artifactId>
-            <version>0.0.3</version>
+            <version>0.0.4</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
