--- a/kermeta_projects/org.kermeta.compilerv2/build.properties
+++ b/kermeta_projects/org.kermeta.compilerv2/build.properties
@@ -2,4 +2,4 @@ source.. = src/
 bin.includes = META-INF/,\
                .,\
                lib/kermeta.compilo.scala-0.0.1-SNAPSHOT.jar,\
-               lib/kermeta.compilo.scala-0.0.2-SNAPSHOT.jar
+               lib/kermeta.compilo.scala-0.0.2-BETA1.jar
