make sure to publish the category definition used to generate the repository
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11540 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: d272a42258fb69023caa5c7bc4334942664dd53b

--- a/hudson_jobs/full_kermeta_studio_updatesite/build.xml
+++ b/hudson_jobs/full_kermeta_studio_updatesite/build.xml
@@ -91,6 +91,12 @@
 		      <include name="**/**"/>
 		    </fileset>
 		</scp>
+		<!-- override the site.xml with the correct category.xml -->
+		<scp file="category.xml" remoteTofile="${deploy.user}@${deploy.server}:${deploy.path}/site.xml"
+			keyfile="${key.file}"
+			passphrase=""
+		    trust="yes">
+		</scp>
 	</target>
 	<target name="get_studio_base">
 		<ant antfile="get_studio_base_build.xml">
