--- a/art2_projects/art2.ui.editor/pom.xml
+++ b/art2_projects/art2.ui.editor/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>art2.model</artifactId>
-      <version>1.2.1-SNAPSHOT</version>
+      <version>1.2.1</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
