git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11547 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: e5f1122c75b63e8549bd409979558b7ed6834ca5

--- a/drools_projects/org.kermeta.smartadapters.diva.toDrools.ui/plugin.xml
+++ b/drools_projects/org.kermeta.smartadapters.diva.toDrools.ui/plugin.xml
@@ -45,8 +45,8 @@
          </menu>
          <action
                class="org.kermeta.smartadapters.diva.toDrools.ui.WeaverUI"
-               enablesFor="2"
-               icon="icons/DivaModelFile.gif"
+               enablesFor="*"
+               icon="icons/Variant.gif"
                id="org.kermeta.smartadapters.diva.toDrools.ui.WeaveAspect"
                label="Weave Aspect"
                menubarPath="smartadapters.diva.menu">
