git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11548 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 7b84a307b8bb0955de53a2c4595dc576685d88c0

--- a/componentmodel.atruntime_projects/art.resource.art.popups/plugin.xml
+++ b/componentmodel.atruntime_projects/art.resource.art.popups/plugin.xml
@@ -9,19 +9,20 @@
             nameFilter="*.art"
             objectClass="org.eclipse.core.resources.IFile">
          <menu
+               id="art.resource.art.popups.menu1"
                label="ART"
-               path="additions"
-               id="art.resource.art.popups.menu1">
+               path="additions">
             <separator
                   name="group1">
             </separator>
          </menu>
          <action
-               label="art 2 artext"
                class="art.resource.art.popups.popup.actions.XMI2ART"
-               menubarPath="art.resource.art.popups.menu1/group1"
                enablesFor="1"
-               id="art.resource.art.popups.popup.actions.XMI2ART">
+               icon="icons/DivaModelFile.gif"
+               id="art.resource.art.popups.popup.actions.XMI2ART"
+               label="art 2 artext"
+               menubarPath="art.resource.art.popups.menu1/group1">
          </action>
       </objectContribution>
       <objectContribution
@@ -39,6 +40,7 @@
          <action
                class="art.resource.art.popups.popup.actions.ART2XMI"
                enablesFor="1"
+               icon="icons/DivaModelFile.gif"
                id="art.resource.art.popups.popup.actions.ART2XMI"
                label="artext 2 art"
                menubarPath="art.resource.art.popups.menu2/group2">
@@ -59,6 +61,7 @@
          <action
                class="art.resource.art.popups.popup.actions.PART2XMI"
                enablesFor="1"
+               icon="icons/DivaModelFile.gif"
                id="art.resource.art.popups.popup.actions.PART2XMI"
                label="smARText 2 smART"
                menubarPath="art.resource.art.popups.menu2/group2">
@@ -79,6 +82,7 @@
          <action
                class="art.resource.art.popups.popup.actions.XMI2PART"
                enablesFor="1"
+               icon="icons/DivaModelFile.gif"
                id="art.resource.art.popups.popup.actions.XMI2PART"
                label="smART 2 smARText"
                menubarPath="art.resource.art.popups.menu1/group1">
