--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.8.0.RC2</version>
+            <version>2.8.0.RC3</version>
         </dependency>
         <dependency>
             <groupId>org.kermeta.art2</groupId>
@@ -69,6 +69,7 @@
                 <configuration>
                     <instructions>
                         <Private-Package></Private-Package>
+                        <Bundle-SymbolicName>org.kermeta.art2.framework</Bundle-SymbolicName>
                         <Import-Package>!com.sun.*,!org.kermeta.art2.annotation,*</Import-Package>
                         <Export-Package>org.kermeta.art2.framework,org.kermeta.art2.framework.*</Export-Package>
                     </instructions>
