Add componentType lib name gesture
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11569 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 2a7e71ad34e474b717a2a204c3626f6310fade3c

--- a/art2_projects/org.kermeta.art2.entimid.fakeStuff/pom.xml
+++ b/art2_projects/org.kermeta.art2.entimid.fakeStuff/pom.xml
@@ -36,6 +36,13 @@
 
 
     <build>
+
+        <resources>
+            <resource>
+                <directory>META-INF</directory>
+                <targetPath>META-INF</targetPath>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
