--- a/art2_projects/art2.aspect.model/pom.xml
+++ b/art2_projects/art2.aspect.model/pom.xml
@@ -3,7 +3,7 @@
         <modelVersion>4.0.0</modelVersion>
         <groupId>org.kermeta.art2</groupId>
         <artifactId>art2.aspect.model</artifactId>
-        <name>ART2 :: Aspect :: Model</name>
+        <name>ART2 :: ASPECT :: MODEL</name>
         <version>0.0.1-SNAPSHOT</version>
         <packaging>bundle</packaging>
 
