git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11605 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: c776bf96d5b1bccf8978df6a0f31b505b7226f3d

--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -5,15 +5,8 @@
     <groupId>org.kermeta.art2</groupId>
     <artifactId>art2.model</artifactId>
     <name>ART2 :: MODEL</name>
-    <version>1.2.2-SNAPSHOT</version>
+    <version>1.4.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
-
-    <distributionManagement>
-        <repository>
-            <id>nexus</id>
-            <url>http://tipimouss.irisa.fr:8081/nexus/content/repositories/snapshots</url>
-        </repository>
-    </distributionManagement>
 
     <repositories>
         <repository>
@@ -82,4 +75,26 @@
     </properties>
 
 
+    <distributionManagement>
+        <repository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local release repository</name>
+            <url>file:/var/www/html/maven2</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local  snapshot repository</name>
+            <url>file:/var/www/html/maven2-snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
+<!--
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <url>http://tipimouss.irisa.fr:8081/nexus/content/repositories/snapshots</url>
+        </repository>
+    </distributionManagement>
+-->
 </project>
