--- a/art2_projects/art2.ui.editor/pom.xml
+++ b/art2_projects/art2.ui.editor/pom.xml
@@ -12,7 +12,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.0.2</version>
+        <version>2.3.1</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
@@ -22,7 +22,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>2.2</version>
+        <version>2.4.3</version>
         <configuration>
           <encoding>${project.build.sourceEncoding}</encoding>
         </configuration>
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>art2.model</artifactId>
-      <version>1.2.1</version>
+      <version>1.4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
