--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -34,29 +34,31 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.model</artifactId>
-            <version>1.2.1-SNAPSHOT</version>
+            <version>1.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.8.0.RC3</version>
+            <version>2.8.0.RC6</version>
         </dependency>
         <dependency>
             <groupId>org.kermeta.art2</groupId>
             <artifactId>art2.annotation</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core</artifactId>
+            <version>2.2.0</version>
         </dependency>
     </dependencies>
-
-
-
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.4.2</version>
+                <version>2.4.3</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
