--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -46,6 +46,14 @@
             <artifactId>art2.annotation</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.4.2</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
         
     </dependencies>
 
