--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -52,7 +52,7 @@
             <artifactId>tools</artifactId>
             <version>1.4.2</version>
             <scope>system</scope>
-            <systemPath>${java.home}/../Classes/classes.jar</systemPath>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>
         
     </dependencies>
