--- a/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.framework/pom.xml
+++ b/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.framework/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>fr.irisa.triskell</groupId>
-    <artifactId>kermeta.scala.framework</artifactId>
+    <groupId>org.kermeta.language</groupId>
+    <artifactId>language.framework.scala</artifactId>
     <packaging>jar</packaging>
     <name>Kermeta :: Framework</name>
     <version>0.0.4</version>
@@ -79,19 +79,19 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>org.kermeta</groupId>
+            <groupId>fr.irisa.triskell</groupId>
             <artifactId>kermeta.model</artifactId>
             <version>1.3.0</version>
         </dependency>
         <dependency>
-            <groupId>org.eclipse</groupId>
-            <artifactId>emf</artifactId>
-            <version>3.5.0</version>
+            <groupId>org.kermeta.emf</groupId>
+            <artifactId>emf.lib</artifactId>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.8.0.RC3</version>
+            <version>2.8.0.RC6</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
