Change KM FW dependency
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11648 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 71bdc752556fe4a2195e9c52c2f1c9655fa8da89

--- a/art2_projects/org.kermeta.art2.kompare/pom.xml
+++ b/art2_projects/org.kermeta.art2.kompare/pom.xml
@@ -119,8 +119,8 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>fr.irisa.triskell</groupId>
-            <artifactId>kermeta.scala.framework</artifactId>
+            <groupId>org.kermeta.language</groupId>
+            <artifactId>language.framework.scala</artifactId>
             <version>0.0.4</version>
         </dependency>
         <dependency>
