Change KM FW dependency
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11657 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: d768c308aa5d1809fc968942aa629e1835433fe1

--- a/art2_projects/org.kermeta.art2.entimid.fakeStuff/pom.xml
+++ b/art2_projects/org.kermeta.art2.entimid.fakeStuff/pom.xml
@@ -7,6 +7,10 @@
     <packaging>bundle</packaging>
     <name>EnTiMid - FakeStuff</name>
     <version>0.2.0-SNAPSHOT</version>
+    <ciManagement>
+        <system>hudson</system>
+        <url>http://tipimouss:8095/job/entimid.fakeStuff/</url>
+    </ciManagement>
     <repositories>
         <repository>
             <id>fr.irisa.triskell</id>
@@ -117,5 +121,22 @@
 
         </plugins>
     </build>
+
+
+    <distributionManagement>
+        <repository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local release repository</name>
+            <url>file:/var/www/html/maven2private</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local  snapshot repository</name>
+            <url>file:/var/www/html/maven2private-snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
 
