Change KM FW dependency
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11658 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 27a9767a706b37ca6305cf2181585ae3ac00a940

--- a/art2_projects/org.kermeta.art2.entimid.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.entimid.framework/pom.xml
@@ -140,9 +140,17 @@
     </properties>
 
     <distributionManagement>
+        <repository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local release repository</name>
+            <url>file:/var/www/html/maven2private</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
         <snapshotRepository>
-            <id>nexus</id>
-            <url>http://tipimouss.irisa.fr:8081/nexus/content/repositories/snapshots</url>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local  snapshot repository</name>
+            <url>file:/var/www/html/maven2private-snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
 
