--- a/kermetaV2netbeans_projects/org.kermeta.netbeans.editor/pom.xml
+++ b/kermetaV2netbeans_projects/org.kermeta.netbeans.editor/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.kermeta.netbeans</groupId>
-    <artifactId>KermetaNBEditor</artifactId>
+    <groupId>org.kermeta.language</groupId>
+    <artifactId>language.editor.netbeans</artifactId>
     <packaging>nbm</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>KermetaNBEditor NetBeans Module</name>
+    <name>Kermeta :: Editor :: Netbeans</name>
     
     <repositories>
         <!-- this is a remote repository hosting the netbeans api artifacts.
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-openide-util</artifactId>
-            <version>SNAPSHOT</version>
+            <version>RELEASE68</version>
         </dependency>
         
         <dependency>
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.8.0.RC1</version>
+            <version>2.8.0.RC2</version>
         </dependency>
         <dependency>
             <groupId>org.kermeta.scala</groupId>
@@ -109,9 +109,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <useOSGiDependencies>false</useOSGiDependencies>
-
                     <netbeansInstallation>/Applications/NetBeans/NetBeans 6.9 Beta.app/Contents/Resources/NetBeans</netbeansInstallation>
-
                 </configuration>
             </plugin>
             
