temporarily remove topcased (which seems incompatible with Helios)
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11744 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 489fca13176f53591cb8ceda2e555fe308e8b213

--- a/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
@@ -136,12 +136,12 @@
   		</antcall>
 		
 		<!-- FROM TOPCASED -->
-		<antcall target="provision_feature">
+	<!--	<antcall target="provision_feature">
     		<param name="feature.name" value="org.topcased.modeler.uml.feature.group, org.topcased.dependencies.feature.group"/>
 			<param name="feature.repository" value="${topcased.official.repository}"/>
 			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
   		</antcall>
-		
+	-->	
 		<!-- FIND BUGS -->
 		<antcall target="provision_feature">
     		<param name="feature.name" value="edu.umd.cs.findbugs.plugin.eclipse.feature.group"/>
