the correct profile seems to be PlatformSDKProfile instead of SDKProfile
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11746 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 290b7498166a010d2ee3c977da3e615ee22077dd

--- a/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
@@ -18,12 +18,12 @@
 	<property name="eclipse.official.repository.local.mirror" location="${env.WORKSPACE}/eclipse_repository_mirror"/>
 		
 	<target name="all" depends="">
-	   <antcall target="provision_macosx-cocoa_x86_64_base_for_kermeta"/>
+	 <!--  <antcall target="provision_macosx-cocoa_x86_64_base_for_kermeta"/>
 	    <antcall target="provision_macosx-cocoa_base_for_kermeta"/>
 		<antcall target="provision_linux_x86_64_base_for_kermeta"/>
 	    <antcall target="provision_linux_x86_base_for_kermeta"/>
-	    <antcall target="provision_win32_base_for_kermeta"/>
-	    <antcall target="provision_win32_x86_64_base_for_kermeta"/>
+	   --> <antcall target="provision_win32_base_for_kermeta"/>
+	   <!-- <antcall target="provision_win32_x86_64_base_for_kermeta"/> -->
 	</target>
 
 
@@ -35,7 +35,7 @@
 			<param name="target.os" value="linux"/>
 			<param name="target.ws" value="gtk"/>
 			<param name="target.arch" value="x86_64"/>
-			<param name="target.profile" value="SDKProfile"/>
+			<param name="target.profile" value="PlatformSDKProfile"/>
 		</antcall>
 	</target>
 	<target name="provision_linux_x86_base_for_kermeta">
@@ -46,7 +46,7 @@
 			<param name="target.os" value="linux"/>
 			<param name="target.ws" value="gtk"/>
 			<param name="target.arch" value="x86"/>
-			<param name="target.profile" value="SDKProfile"/>
+			<param name="target.profile" value="PlatformSDKProfile"/>
 		</antcall>
 	</target>
 
@@ -58,7 +58,7 @@
 			<param name="target.os" value="win32"/>
 			<param name="target.ws" value="win32"/>
 			<param name="target.arch" value="x86"/>
-			<param name="target.profile" value="SDKProfile"/>
+			<param name="target.profile" value="PlatformSDKProfile"/>
 		</antcall>
 	</target>
 	
@@ -70,7 +70,7 @@
 			<param name="target.os" value="win32"/>
 			<param name="target.ws" value="win32"/>
 			<param name="target.arch" value="x86_64"/>
-			<param name="target.profile" value="SDKProfile"/>
+			<param name="target.profile" value="PlatformSDKProfile"/>
 		</antcall>
 	</target>
 	
@@ -82,7 +82,7 @@
 			<param name="target.os" value="macosx"/>
 			<param name="target.ws" value="cocoa"/>
 			<param name="target.arch" value="x86_64"/>
-			<param name="target.profile" value="SDKProfile"/>
+			<param name="target.profile" value="PlatformSDKProfile"/>
 		</antcall>
 	</target>
 	<target name="provision_macosx-cocoa_base_for_kermeta">
@@ -93,7 +93,7 @@
 			<param name="target.os" value="macosx"/>
 			<param name="target.ws" value="cocoa"/>
 			<param name="target.arch" value="x86"/>
-			<param name="target.profile" value="SDKProfile"/>
+			<param name="target.profile" value="PlatformSDKProfile"/>
 		</antcall>
 	</target>
 
