--- a/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
@@ -120,12 +120,14 @@
 		</antcall>
 		
 		<!-- get log4j plugin from Kermeta site -->
+	<!-- bug The copies of profile PlatformSDKProfile are not in sync.
+	 maybe due to https://bugs.eclipse.org/bugs/show_bug.cgi?id=317656 ?
 		<antcall target="provision_feature">
     		<param name="feature.name" value="org.apache.log4j"/>
 			<param name="feature.repository" value="http://www.kermeta.org/update"/>
 			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
   		</antcall>
-		
+	-->	
 		<!-- FROM OFFICIAL ECLIPSE UPDATE SITE -->
 		<!-- org.eclipse.xpand.sdk.feature.group is required by topcased UML modeler,
 		     org.eclipse.jdt seems not installed in some version (win32) and is required by findbug -->
