--- a/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
@@ -201,6 +201,7 @@
 			<arg value="-p2.arch"/> 
 			<arg value="${target.arch}"/>
  			<jvmarg value="-Declipse.p2.data.area=${target.eclipse.dir}/eclipse/p2"/>
+			<jvmarg value="-Declipse.p2.MD5Check=false"/>
 		</java>	
 	</target>
 	
