seems to be due to a deprecated parameter https://bugs.eclipse.org/bugs/show_bug.cgi?id=310041
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11751 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 646bf752fdefcb3cd13c4c81d5a1a3f140f09b07

--- a/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
@@ -200,7 +200,7 @@
 			<arg value="${target.ws}"/> 
 			<arg value="-p2.arch"/> 
 			<arg value="${target.arch}"/>
- 			<jvmarg value="-Declipse.p2.data.area=${target.eclipse.dir}/eclipse/p2"/>
+			<arg value="-shared ${target.eclipse.dir}/eclipse/p2"/>
 			<jvmarg value="-Declipse.p2.MD5Check=false"/>
 		</java>	
 	</target>
